# pysdg1032x

./: LICENSE.md  README.md  setup.cfg
src/sdg1032x/: sdg1032x  sdg1032x.py  sdg1032xminicli.py
