[metadata]
name = pysdg1032x-tspspi
version = 0.0.1
author = Thomas Spielauer
author_email = pypipackages01@tspi.at
description = Unofficial library to control SDG1032X arbitrary waveform generators
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tspspi/pysdg1032x
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    sdg1032x = sdg1032x.sdg1032xminicli:sdg1032xminicli
